--- a/styles/components/components.scss
+++ b/styles/components/components.scss
@@ -5,6 +5,10 @@
 @import "sidebar.scss";
 @import "card.scss";
 @import "profile.scss";
-@import "grid.scss";
-@import "workers.scss";
+@import "box.scss";
+@import "table.scss";
 @import "button.scss";
+@import "calendar.scss";
+@import "grid.scss";
+@import "dots.scss";
+@import "user.scss";
