--- a/styles/components/grid.scss
+++ b/styles/components/grid.scss
@@ -1,127 +1,34 @@
-/*
-    component: grid.scss
-*/
-
 $grid-spc: 12px;
-
 .row {
+  width: 100%;
   display: flex;
   flex-wrap: wrap;
-  width: calc(100% + (#{$grid-spc} * 2));
   align-content: flex-start;
-  margin-left: -$grid-spc;
   margin-right: -$grid-spc;
-
   &--padd {
     padding-left: $grid-spc;
     padding-right: $grid-spc;
   }
-  
+
   &--adaptive {
     & > .col {
       display: flex;
     }
   }
-}
-
-.col {
-  padding-left: 12px;
-  padding-right: 12px;
-  &-3 {
-    width: 25%;
-  }
-  &-4 {
-    width: 33.33%;
-  }
-  &-6 {
-    width: 50%;
-  }
-  &-12 {
-    width: 100%;
-  }
-}
-
-@media (min-width: 576px) {
   .col {
-    &-3 {
-        width: 25%;
+    padding-left: 16px;
+    padding-right: 16px;
+    padding-bottom: 32px;
+
+    &-main {
+      display: block;
+      border: 1px solid red !important;
+      width: calc(100% - 450px);
     }
-    &-4 {
-        width: 33.33%;
-    }
-    &-6 {
-        width: 50%;
-    }
-    &-12 {
-        width: 100%;
+    &-aside {
+      border: 1px solid yellow;
+      width: 450px;
+      display: block;
     }
   }
-}
-
-@media (min-width: 576px) {
-    .col-sm {
-        &-3 {
-            width: 25%;
-        }
-        &-4 {
-            width: 33.33%;
-        }
-        &-6 {
-            width: 50%;
-        }
-        &-12 {
-            width: 100%;
-        }
-    }
-}
-
-@media (min-width: 768px) {
-    .col-md {
-        &-3 {
-            width: 25%;
-        }
-        &-4 {
-            width: 33.33%;
-        }
-        &-6 {
-            width: 50%;
-        }
-        &-12 {
-            width: 100%;
-        }
-    }
-}
-
-@media (min-width: 992px) {
-    .col-lg {
-        &-3 {
-            width: 25%;
-        }
-        &-4 {
-            width: 33.33%;
-        }
-        &-6 {
-            width: 50%;
-        }
-        &-12 {
-            width: 100%;
-        }
-    }
-}
-
-@media (min-width: 1200px) {
-    .col-xl {
-        &-3 {
-            width: 25%;
-        }
-        &-4 {
-            width: 33.33%;
-        }
-        &-6 {
-            width: 50%;
-        }
-        &-12 {
-            width: 100%;
-        }
-    }
 }
