--- a/styles/components/sidebar.scss
+++ b/styles/components/sidebar.scss
@@ -1,19 +1,17 @@
-.sidebar{
-    width:300px;  
-    position: fixed;
+.sidebar {
+  width: 300px;
+  position: fixed;
 
-&__title{
-    font-family:Rubik;
+  &__title {
+    font-family: Rubik;
     font-size: 25px;
-    color:white;
-    display:flex;
-    align-items:center;
+    color: white;
+    display: flex;
+    align-items: center;
     padding: 30px;
-    
-}
+  }
 
-&__link{
-    opacity: 0.6;
+  &__link {
     display: flex;
     align-items: center;
     color: #cccccc;
@@ -21,69 +19,62 @@
     padding-left: 55px;
     text-decoration: none;
     font-family: Noto Sans JP;
+    padding-bottom: 20px;
 
-
-
-
-&__calendar {
-        content:url(../../assets/icons/Calendar.svg);
-}
-
-&__reports {
-    content:url(../../assets/icons/Reports.svg);
-}
-&__recruitment {
-    content:url(../../assets/icons/Recruitment.svg);
-}
-&__clipboard {
-    content:url(../../assets/icons/Clipboard.svg);
-}
-&__settings {
-    content:url(../../assets/icons/Settings.svg);
-}
-
-&__dashboard {
-    content:url(../../assets/icons/Dashboard.svg);
-}
-
-    &:hover {        
-        color: #6263d5;
-        background-color: #fff;
-        opacity: 1;
-        border-radius: 10px;
-        width:250px;
-        margin-left:4px;
-        
-        .sidebar__link__calendar{
-            content: url(../../assets/icons/CalendarHover.svg);             
-            width:20px;
-        }
-        .sidebar__link__recruitment{
-            content: url(../../assets/icons/RecruitmentHover.svg);             
-            width:20px;
-        }
-
-        .sidebar__link__settings{
-            content: url(../../assets/icons/SettingsHover.svg);             
-            width:20px;
-        }
-        .sidebar__link__clipboard{
-            content: url(../../assets/icons/ClipboardHover.svg);             
-            width:20px;
-        }
-        .sidebar__link__dashboard{
-            content: url(../../assets/icons/DashboardHover.svg);             
-            width:20px;
-        }
-        .sidebar__link__reports{
-            content: url(../../assets/icons/ReportsHover.svg);             
-            width:20px;
-            }
-        }
+    &__calendar {
+      content: url(../../assets/icons/Calendar.svg);
     }
+
+    &__reports {
+      content: url(../../assets/icons/Reports.svg);
+    }
+    &__recruitment {
+      content: url(../../assets/icons/Recruitment.svg);
+    }
+    &__clipboard {
+      content: url(../../assets/icons/Clipboard.svg);
+    }
+    &__settings {
+      content: url(../../assets/icons/Settings.svg);
+    }
+
+    &__dashboard {
+      content: url(../../assets/icons/Dashboard.svg);
+    }
+
+    &:hover {
+      color: #6263d5;
+      background-color: #fff;
+      opacity: 1;
+      border-radius: 10px;
+      width: 250px;
+      margin-left: 4px;
+
+      .sidebar__link__calendar {
+        content: url(../../assets/icons/CalendarHover.svg);
+        width: 20px;
+      }
+      .sidebar__link__recruitment {
+        content: url(../../assets/icons/RecruitmentHover.svg);
+        width: 20px;
+      }
+
+      .sidebar__link__settings {
+        content: url(../../assets/icons/SettingsHover.svg);
+        width: 20px;
+      }
+      .sidebar__link__clipboard {
+        content: url(../../assets/icons/ClipboardHover.svg);
+        width: 20px;
+      }
+      .sidebar__link__dashboard {
+        content: url(../../assets/icons/DashboardHover.svg);
+        width: 20px;
+      }
+      .sidebar__link__reports {
+        content: url(../../assets/icons/ReportsHover.svg);
+        width: 20px;
+      }
+    }
+  }
 }
-
-
-
-
-
