--- a/styles/components/grid.scss
+++ b/styles/components/grid.scss
@@ -21,12 +21,14 @@ $grid-spc: 12px;
     padding-bottom: 32px;
 
     &-main {
+      padding-top: 10px;
       display: block;
-      border: 1px solid red !important;
+      //border: 1px solid red !important;
       width: calc(100% - 450px);
     }
     &-aside {
-      border: 1px solid yellow;
+      padding-top: 10px;
+      //border: 1px solid yellow;
       width: 450px;
       display: block;
     }
