--- a/styles/components/profile.scss
+++ b/styles/components/profile.scss
@@ -2,6 +2,7 @@
   display: inline-flex;
   align-items: center;
   font-family: Noto Sans JP;
+
   &__name {
     padding-left: 20px;
     padding-right: 20px;
@@ -12,6 +13,12 @@
     width: 55px;
     height: 55px;
     border-radius: 50%;
+
+    &--squared {
+      width: 100px;
+      height: 100px;
+      border-radius: 20%;
+    }
 
     &--secondary {
       border: 1px solid black;
