--- a/styles/components/user.scss
+++ b/styles/components/user.scss
@@ -5,13 +5,6 @@
   width: 100%;
   padding: 10px 40px;
 
-  &__imagebox {
-    width: 100px;
-    margin-bottom: 12px;
-    margin-left: auto;
-    margin-right: auto;
-  }
-
   &__image {
     object-fit: cover;
     width: 100px;
@@ -21,27 +14,39 @@
   }
 
   &__container {
+    width: 30%;
+    margin-bottom: 12px;
     margin-left: auto;
     margin-right: auto;
-    width: 100%;
   }
 
-  &__title {
-    font-family: Noto Sans JP;
-    font-weight: bold;
-    text-align: center;
-  }
-
-  &__subtitle {
-    opacity: 0.4;
+  &__text {
     font-family: Noto Sans JP;
     text-align: center;
-    font-weight: lighter;
+    &--primary {
+      font-weight: bold;
+      text-align: center;
+    }
+    &--secondary {
+      font-weight: lighter;
+      opacity: 0.4;
+    }
   }
 
   &__icons {
     margin-left: auto;
     margin-right: auto;
     width: 206px;
+  }
+
+  &__border {
+    border-top: 1px solid grey;
+    opacity: 0.3;
+  }
+
+  &__info {
+    display: flex;
+    justify-content: space-between;
+    padding-top: 15px;
   }
 }
