--- a/styles/overrides/react-date-range.scss
+++ b/styles/overrides/react-date-range.scss
@@ -1,123 +1,251 @@
-.rdrMonthAndYearWrapper {
-  display: none !important;
-}
+/*
+.rdr {
+  .rdrDefinedRangesWrapper {
+    display: none;
+  }
+  .rdrCalendarWrapper {
+    width: 100%;
+    position: relative;
+  }
 
-.rdrWeekDay {
-  font-family: Noto Sans JP !important;
-  font-weight: bold !important;
-  color: black !important;
-}
+  .rdrMonth {
+    width: 400px;
+    border-radius: 20px;
+    background-color: white;
+  }
+  .rdrMonthAndYearWrapper {
+    height: 30px;
+    padding: 0;
+    font-weight: bold;
+    font-size: 20px;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    .rdrNextPrevButton {
+      width: 46px;
+      height: 28px;
+      border-radius: 10px;
+    }
+    .rdrPprevButton {
+      position: absolute;
+      right: 60px;
+      background-color: grey;
+    }
+    .rdrNextButton {
+      position: absolute;
+      right: 0;
+      background-color: grey;
+      margin-right: 0;
+      i {
+        margin: 0 0 0 18px;
+      }
+    }
+    //display: none;
+  }
+  .rdrMonthAndYearPickers {
+    text-align: left;
+    position: absolute;
+  }
 
-.rdrMonth {
-  padding: 0 0.833em 1.666em 0.833em;
-  width: 34.667em;
-  background-color: white;
-  border-radius: 25px;
-}
+  .rdrDateDisplayWrapper {
+    background-color: purple;
+    margin-top: 46px;
+    background-color: #eff1ff;
+  }
+  .rdrDateRangeWrapper {
+    background-color: purple;
+  }
+  .rdrDateInput {
+    border-radius: 8px;
+    padding: 8px;
+    background-color: #dadcf9;
+    input {
+      color: purple;
+      font-weight: bold;
+    }
+  }
+  .rdrDateDisplay {
+    margin: 0;
+    margin-bottom: 16px;
+  }
+  .rdrDateDisplayItemActive {
+    border: none;
+  }
 
-.rdrCalendarWrapper {
-  border-radius: 10px !important;
-  margin-top: 12px !important;
-}
+  .rdrDateDisplayItem {
+    margin-left: 0.833em;
+    border-radius: 4px;
+    background-color: rgb(219, 220, 250);
+    box-shadow: 0 1px 2px 0 rgb(35 57 66 / 21%);
+    border: 1px solid transparent;
+    flex: 1 1;
+    width: 0;
+    text-align: center;
+    color: inherit;
+  }
 
-.rdrDateDisplayWrapper {
-  background-color: #eff1ff !important;
-}
+  .rdrWeekDay {
+    font-weight: bold;
+    color: black;
+  }
+  .rdrStartEdge {
+    background-color: purple;
+    right: 0;
+    width: 26px;
+    height: 26px;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 50%;
+  }
+  .rdrEndEdge {
+    background-color: #ed960b;
+    right: 0;
+    width: 26px;
+    height: 26px;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 50%;
+    span {
+      color: white;
+    }
+  }
+  .rdrInRange {
+    background-color: white;
+  }
 
-.rdrDateDisplayItemActive input {
-  color: #6263d5 !important;
-  background-color: #dadcf9 !important;
-}
+  .rdrDay:not(.rdrDayPassive) .rdrInRange ~ .rdrDayNumber span,
+  .rdrDay:not(.rdrDayPassive) span {
+    color: black;
+  }
 
-.rdrDateDisplayItemActive {
-  border-color: #dadcf9 !important;
+  .rdrEndEdge ~ .rdrDayNumber span {
+    color: white !important;
+  }
+  .rdrDayToday .rdrDayNumber span:after {
+    background: none;
+  }
+  .rdrDayHovered {
+    border: none;
+  }
 }
-.rdrDateDisplayItem {
-  background-color: #dadcf9 !important;
-}
+*/
 
-.rdrDateDisplayItem input {
-  text-align: left !important;
-}
+.rdr {
+  &DefinedRangesWrapper {
+    display: none;
+  }
+  &CalendarWrapper {
+    width: 100%;
+    position: relative;
+  }
+  &Month {
+    width: 400px;
+    border-radius: 20px;
+    background-color: white;
+  }
 
-.rdrDateDisplay {
-  width: 98% !important;
-}
+  &MonthAndYearWrapper {
+    display: none !important;
+    .rdrNextPrevButton {
+      width: 46px;
+      height: 28px;
+      border-radius: 10px;
+      display: none;
+    }
+    .rdrPprevButton {
+      position: absolute;
+      right: 60px;
+      background-color: blue;
+    }
+    .rdrNextButton {
+      position: absolute;
+      right: 0;
+      background-color: blue;
+      margin-right: 0;
+      i {
+        margin: 0 0 0 18px;
+      }
+    }
+    //display: none;
+  }
+  &MonthAndYearPickers {
+    text-align: left;
+    position: absolute;
+  }
 
-.rdrEndEdge {
-  margin-left: auto;
-  margin-right: auto;
-  width: 26px;
-  height: 26px;
-  border-radius: 50%;
-  background-color: orange;
-}
-.rdrDayNumber {
-  outline: 0;
-  font-weight: 300;
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 0;
-  bottom: 0;
-  top: 5px;
-  bottom: 5px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.rdrDay {
-  box-sizing: inherit;
-  width: calc(100% / 7);
-  position: relative;
-  font: inherit;
-  cursor: pointer;
-  user-select: none;
-  border: 0;
-  padding: 0;
-  line-height: 3em;
-  height: 3em;
-  text-align: center;
-}
-.rdrStartEdge {
-  background-color: #6263d5 !important;
-  width: 26px !important;
-  height: 26px !important;
-  margin-left: auto !important;
-  margin-right: auto !important;
-  border-radius: 50% !important;
-}
+  &DateDisplayWrapper {
+    background-color: yellow;
+  }
+  &DateRangeWrapper {
+    background-color: red;
+  }
+  &DateInput {
+    border-radius: 8px;
+    padding: 8px;
+    background-color: #dadcf9;
+    input {
+      color: blue;
+      font-weight: bold;
+    }
+  }
+  &DateDisplay {
+    margin: 0;
+    margin-bottom: 16px;
+  }
+  &DateDisplayItem {
+    border-radius: 4px;
+    background-color: rgb(255, 255, 255);
+    box-shadow: 0 1px 2px 0 rgb(35 57 66 / 21%);
+    border: none;
+  }
+  &DateDisplayItemActive {
+    border: none;
+  }
 
-.rdrInRange {
-  background-color: white !important;
-}
+  &DateDisplayItemActive {
+    border: none;
+  }
+  &WeekDay {
+    font-weight: bold;
+    color: black;
+  }
+  &StartEdge {
+    background-color: blue;
+    right: 0;
+    width: 26px;
+    height: 26px;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 50%;
+  }
+  &EndEdge {
+    background-color: #ed960b;
+    right: 0;
+    width: 26px;
+    height: 26px;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 50%;
+    span {
+      color: white;
+    }
+  }
+  &InRange {
+    background-color: white;
+  }
 
-.rdrDay:not(.rdrDayPassive) .rdrInRange ~ .rdrDayNumber span,
-.rdrDay:not(.rdrDayPassive) span {
-  color: black !important;
-}
+  &Day:not(.rdrDayPassive) &InRange ~ &DayNumber span,
+  &Day:not(.rdrDayPassive) span {
+    color: black;
+  }
 
-.rdrEndEdge ~ .rdrDayNumber span {
-  color: white !important;
-}
-.rdrStartEdge ~ .rdrDayNumber span {
-  color: white !important;
-}
-
-.rdrMonths ~ .rdrMonthsVertical {
-  background-color: white !important;
-  border-radius: 25px !important;
-}
-
-.rdrCalendarWrapper {
-  box-sizing: border-box !important;
-  /* background: #ffffff; */
-  display: inline-flex !important;
-  flex-direction: column !important;
-  -webkit-user-select: none !important;
-  -moz-user-select: none !important;
-  -ms-user-select: none !important;
-  user-select: none !important;
-  border-radius: 127px !important;
-  margin-top: 12px !important;
+  &EndEdge ~ &DayNumber span {
+    color: white !important;
+  }
+  &DayToday &DayNumber span:after {
+    background: none;
+  }
+  &DayHovered {
+    border: none;
+  }
 }
