End of design practice project.

--- a/src/styles/components/components.scss
+++ b/src/styles/components/components.scss
@@ -1,3 +1,14 @@
 @import "layout.scss";
-@import "sidebar.scss";
 @import "icons.scss";
+@import "illustrations.scss";
+@import "header.scss";
+@import "sidebar.scss";
+@import "card.scss";
+@import "profile.scss";
+@import "box.scss";
+@import "table.scss";
+@import "button.scss";
+@import "calendar.scss";
+@import "grid.scss";
+@import "dots.scss";
+@import "user.scss";
